# measure

./: .all-contributorsrc  .commitlintrc.js  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LOCAL_DEVELOPMENT.md  Measure.podspec  MeasureSDK.podspec  Package.swift  README.md  RELEASE.md  SECURITY.md  biome.jsonc  cliff.toml  docker-bake.hcl  docs_description.txt  go.work  go.work.sum  measure-sh.podspec  package-lock.json  package.json
android/measure-android/measure/src/main/: CMakeLists.txt
android/measure-android/measure/src/main/java/sh/measure/android/: Handlers.kt  Measure.kt  MeasureInitProvider.kt  (+5 more)
android/measure-android/measure/src/main/jni/: anr_handler.h  jni_utils.h  measure.cpp
android/measure-android/measure/src/main/res/drawable/: msr_ic_close_16.xml
android/measure-android/measure/src/main/res/layout/: msr_screenshot.xml
android/measure-android/measure/src/main/res/values/: attrs.xml
measure-android/measure-ndk/src/main/: CMakeLists.txt
measure-android/measure-ndk/src/main/cpp/: anr_handler.c  jni_utils.c  measure.cpp
measure-android/measure-ndk/src/main/java/sh/measure/: NativeBridge.kt
measure-android/measure/src/main/: AndroidManifest.xml  CMakeLists.txt
measure-android/measure/src/main/java/sh/measure/android/: Config.kt  Handlers.kt  Measure.kt  MeasureApi.kt  MeasureClient.kt  MeasureInitProvider.kt  MeasureInitializer.kt  MeasureInternal.kt  NativeBridge.kt  SessionManager.kt
measure-android/measure/src/main/java/sh/measure/sample/: Measure.kt  MeasureClient.kt
measure-android/measure/src/main/jni/: anr_handler.c
(+8244 files in other folders)
